[package]
name = "yolo2dot"
version = "0.1.0"
edition = "2021"
description = "A visualizing tool to plot model architecture graph for YOLO .yaml files."
categories = ["science", "command-line-utilities"]
license = "MIT"
documentation = "https://docs.rs/yolo2dot"
homepage = "https://github.com/jerry73204/yolo2dot.git"
repository = "https://github.com/jerry73204/yolo2dot.git"
readme = "README.md"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.7", features = ["derive"] }
dot = "0.1.4"
itertools = "0.10.5"
serde = { version = "1.0.163", features = ["derive"] }
serde_yaml = "0.9.21"
strum = { version = "0.24.1", features = ["derive"] }
